<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mrn_list_item"
    android:layout_width="fill_parent"
    android:layout_height="44dp" >

    <CheckBox
        android:id="@+id/mrn_cb"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:checked="true" />

    <TextView
        android:id="@+id/tvMrnTitle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:text="@string/mrn"
        android:textColor="#dde"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvMrn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.85"
        android:gravity="center_vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:text="@string/dummy"
        android:textColor="#dde"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/mrn_status"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:contentDescription="@string/none"
        android:src="@drawable/red"
        android:visibility="visible" />

</LinearLayout>