<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbars="vertical"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/list_group_semi"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/dbh_s"
        android:gravity="center_vertical|center_horizontal"
        android:maxLines="2"
        android:padding="10dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textColor="#223355"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcome_desc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/first_startup"
                android:textColor="#dde"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/firststart_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/yourname_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/register_enter_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#dde"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/your_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:ems="12"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textPersonName"
                android:visibility="invisible" />

            <Button
                android:id="@+id/startScanButton"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg_pressed"
                android:onClick="startScanner"
                android:text="@string/welcome_start_scanner"
                android:textColor="#fff"
                android:visibility="invisible" />

            <Button
                android:id="@+id/showLastManifestButton"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_bg_pressed"
                android:text="@string/welcome_show_last_manifest"
                android:textColor="#fff"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>