<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#112"
    android:gravity="center_vertical"
    android:orientation="vertical" >

	<LinearLayout 
	    android:id="@+id/manifest_header"
	    android:layout_width="fill_parent"
	    android:layout_height="77dp"
	    android:background="@drawable/list_group_semi"
	    android:orientation="horizontal" >

		<ImageButton
		    android:id="@+id/submitButton"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_gravity="center"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="5dp"
		    android:background="@drawable/button_bg_pressed"		    
		    android:src="@drawable/ic_menu_refresh" 
		    android:contentDescription="@string/none"/>

		<LinearLayout
		    android:id="@+id/manifest_header_col2"
		    android:layout_width="wrap_content"
		    android:layout_height="75dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginTop="3dp"
		    android:orientation="vertical" >

			<TextView
			    android:id="@+id/TextView05"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="3dp"
			    android:gravity="center_vertical"
			    android:padding="2dp"
			    android:text="@string/manifest_id"
			    android:textColor="#112"
			    android:textSize="14sp"
			    android:textStyle="bold" />
			
			<TextView
			    android:id="@+id/listheader_spedition_name_title"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center_vertical"
			    android:padding="2dp"
			    android:text="@string/spedition"
			    android:textColor="#112"
			    android:textSize="14sp"
			    android:textStyle="bold" />
		</LinearLayout>

		<LinearLayout 
		    android:id="@+id/manifest_header_col3"
		    android:layout_width="fill_parent"
		    android:layout_height="75dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginTop="3dp"
		    android:orientation="vertical" >

			<TextView
			    android:id="@+id/listheader_manifest_id"
			    android:layout_width="match_parent"
			    android:layout_height="20dp"
			    android:layout_marginTop="4dp"
			    android:gravity="center_vertical"
			    android:padding="2dp"
			    android:textColor="#235"
			    android:textIsSelectable="true"
			    android:textSize="12sp"
			    android:textStyle="bold" />

			<TextView
			    android:id="@+id/listheader_spedition_name"
			    android:layout_width="match_parent"
			    android:layout_height="20dp"
			    android:gravity="center_vertical"
			    android:padding="2dp"
			    android:textColor="#235"
			    android:textIsSelectable="true"
			    android:textSize="12sp"
			    android:textStyle="bold" />
			
			<TextView
			    android:id="@+id/listheader_eori_no"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center_vertical"
			    android:padding="2dp"
			    android:textColor="#235"
			    android:textIsSelectable="true"
			    android:textSize="12sp"
			    android:textStyle="bold" />

		</LinearLayout>

	<TextView
	    android:id="@+id/manifest_header_id"
	    android:layout_width="match_parent"
	    android:layout_height="64dp"
	    android:background="#336699"
	    android:gravity="center_vertical"
	    android:padding="10dp" 
	    android:textColor="#FFFFFF"
	    android:textSize="22sp"
	    android:textStyle="bold"
	    android:textIsSelectable="true" />
	
	</LinearLayout>

	<ExpandableListView
	    android:id="@+id/manifest_list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:scrollbars="none"
	    android:visibility="visible" >
	</ExpandableListView>

	<FrameLayout
	    android:id="@+id/manifest_waiting"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/button_bg_red"
	    android:padding="10dp" >

	    <LinearLayout
	        android:id="@+id/manifest_waiting_inner"
	        android:layout_width="255dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal" >

	        <ProgressBar
	            android:id="@+id/progressBar1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical" />

	        <TextView
	            android:id="@+id/manifest_waiting_text"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="10dp"
	            android:gravity="center_vertical"
	            android:text="@string/commit_in_process"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#ccd"
	            android:textIsSelectable="true"
	            android:textSize="14sp" />
	    </LinearLayout>
	</FrameLayout>

</LinearLayout>